--- a/force-app/main/default/classes/GroceryServices.cls
+++ b/force-app/main/default/classes/GroceryServices.cls
@@ -1,4 +1,8 @@
 public class GroceryServices {
+    public static DataBase.SaveResult createTransaction(String paymentType) {
+        
+    }
+
     public static List<Transaction__c> filterValidTransactions(List<Transaction__c> transactionsList) {
         Set<String> filterStatus = new Set<String>{'Active', 'Closed'};
         List<Transaction__c> filtredTransactions = new List<Transaction__c>();
