--- a/force-app/main/default/classes/LineItemDTO.cls
+++ b/force-app/main/default/classes/LineItemDTO.cls
@@ -1,7 +1,11 @@
 public class LineItemDTO {
     public String name {get; set;}
+    public Id productId {get; set;}
+    public Double quantity {get; set;}
 
-    public LineItemDTO(String name) {
+    public LineItemDTO(String name, Id productId, Double quantity) {
         this.name = name;
+        this.productId = productId;
+        this.quantity = quantity;
     }
 }
