--- a/force-app/main/default/classes/LineItemTriggerTest.cls
+++ b/force-app/main/default/classes/LineItemTriggerTest.cls
@@ -5,30 +5,28 @@ public class LineItemTriggerTest {
         Product__c product1 = new Product__c(
             Name = 'product1',
             Price__c = 1.5,
-            Available_Amount__c = 150
+            Available_Amount__c = 25
         );
 
-        Product__c product2 = new Product__c(
-            Name = 'product2',
-            Price__c = 4,
-            Available_Amount__c = 100
-        );
-
-        Product__c product3 = new Product__c(
-            Name = 'product3',
-            Price__c = 1
-        );
-
-        insert new List<Product__c>{product1, product2, product3};
+        insert product1;
 
         Transaction__c transaction1 = new Transaction__c(Payment_Type__c = 'Visa', Status__c = 'Active');
         insert transaction1;
+
+        Line_Item__c newLineItem = new Line_Item__c(
+            Name = 'line item for test',
+            Transaction__c = transaction1.Id,
+            Product__c = product1.Id,
+            Quantity__c = 10
+        );
+        insert newLineItem;
     }
 
     @isTest
     static void testInsertLineItem(){
-        Transaction__c targetTransaction = [SELECT Id FROM Transaction__c LIMIT 1];
-        Product__c targetProduct = [SELECT Id FROM Product__c WHERE Name = 'product1'];
+        Transaction__c targetTransaction = [SELECT Id FROM Transaction__c];
+        Product__c targetProduct = [SELECT Id, Available_Amount__c FROM Product__c WHERE Name = 'product1'];
+        
         Test.startTest();
         Line_Item__c newLineItem = new Line_Item__c(
             Name = 'new line item',
@@ -37,8 +35,26 @@ public class LineItemTriggerTest {
             Quantity__c = 14
         );
         Database.SaveResult sr = Database.insert(newLineItem);
+
+        targetProduct = [SELECT Id, Available_Amount__c FROM Product__c WHERE Name = 'product1'];
+        Double newAvailableAmount = targetProduct.Available_Amount__c;
         Test.stopTest();
 
         System.assert(sr.isSuccess(), 'LineItemTrigger : line item created');
+        System.assert(newAvailableAmount == 1, 'LineItemTrigger.Insert : the product has been removed from the store');
+    }
+
+    @isTest
+    static void testUpdateLineItem(){
+        Test.startTest();
+        Line_Item__c lineItemForUpdate = [SELECT Id, Quantity__c FROM Line_Item__c];
+        lineItemForUpdate.Quantity__c = 14;
+
+        Database.SaveResult sr = Database.update(lineItemForUpdate);
+        Product__c targetProduct = [SELECT Id, Available_Amount__c FROM Product__c WHERE Name = 'product1'];
+        Test.stopTest();
+
+        System.assert(sr.isSuccess(), 'LineItemTrigger : line item updated');
+        System.assert(targetProduct.Available_Amount__c == 11, 'LineItemTrigger.Update : the product has been updated in the store');
     }
 }
