added new LWC to transactions line item

--- a/force-app/main/default/classes/MostProfitableTransactionsController.cls
+++ b/force-app/main/default/classes/MostProfitableTransactionsController.cls
@@ -1,4 +1,4 @@
-public with sharing class MostProfitableTransactionsController {
+public class MostProfitableTransactionsController {
     @AuraEnabled
     public static List<Transaction__c> getMostProfitableTransactions(Integer limitNumber){
         return [
